// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateMessage component Should be render correctly if blocking update 1`] = `
<div
  className="u-flex u-flex-column u-maw-6 u-mih-2 u-bdrs-4 u-ph-1 u-pt-1 u-bg-paleGrey u-ta-left u-bg-chablis u-maw-none"
>
  <SubTitle
    className="u-mb-1 u-pomegranate"
    ellipsis={false}
    tag="div"
  >
    An update is available for this service.
  </SubTitle>
  <div
    className="u-flex u-w-100 u-mb-1"
  >
    <Text
      className="u-ta-left"
      ellipsis={false}
      tag="div"
    >
      Update it to keep fetching your data
    </Text>
  </div>
  <div
    className="u-flex-shrink-0 u-mb-1"
  >
    <DefaultButton
      className="u-m-0"
      disabled={false}
      label="Update"
      onClick={[Function]}
      theme="danger"
    />
  </div>
</div>
`;

exports[`UpdateMessage component Should be render correctly if not blocking update 1`] = `
<div
  className="u-flex u-flex-column u-maw-6 u-mih-2 u-bdrs-4 u-ph-1 u-pt-1 u-bg-paleGrey u-ta-left u-maw-none"
>
  <SubTitle
    className="u-mb-1"
    ellipsis={false}
    tag="div"
  >
    An update is available for this service.
  </SubTitle>
  <div
    className="u-flex u-w-100 u-mb-1"
  >
    <Text
      className="u-ta-left"
      ellipsis={false}
      tag="div"
    >
      Perform this update to keep fetching your data and to have the latest features
    </Text>
  </div>
  <div
    className="u-flex-shrink-0 u-mb-1"
  >
    <DefaultButton
      className="u-m-0"
      disabled={false}
      label="Update"
      onClick={[Function]}
      theme="danger"
    />
  </div>
</div>
`;
